# jubako

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Changelog.md  README.md  README.rst  arx_format.md  kym_format.md  search_commit.sh  testimonial.md  testimonial.rst
.github/: FUNDING.yml
.github/workflows/: check_release.yml  ci.yml  pre_release.yml  release.yml
doc/internal/: layout_and_schema.md
examples/: basic_creator.rs  custom_read.rs  simple_create.rs  simple_read.rs
spec/: README.rst  arx.md  arx.rst  container.rst  contentPack.rst  directory.md  directory.rst  head.rst  index.rst  jubako.dia  main.md  main.rst  manifest.rst  pack.md  pack.rst
src/: bases.rs  cmd_utils.rs  common.rs  content_pack.rs  creator.rs  directory_pack.rs  headers.rs  io.rs  jubako.rs  lib.rs  main_pack.rs  pack.rs  primitive.rs  reader.rs  tools.rs
src/bases/: block.rs  cache.rs  explorable.rs  flux.rs  io.rs  memory_reader.rs  mod.rs  parsing.rs  primitive.rs  producing.rs  prop_type.rs  reader.rs  skip.rs  stream.rs  sub_reader.rs  types.rs  write.rs
src/bases/io/: buffer.rs  compression.rs  file.rs  mmap.rs  mod.rs
src/bases/types/: asize.rs  base_array.rs  byte_size.rs  count.rs  delayed.rs  entry_range.rs  error.rs  free_data.rs  id.rs  idx.rs  idx_vec.rs  mayref.rs  mod.rs  offset.rs  pstring.rs  range.rs  size.rs  sized_offset.rs  small_bytes.rs  small_string.rs  specific_types.rs  vendor_id.rs
src/common/: check.rs  compression_type.rs  content_address.rs  content_info.rs  entry_info.rs  headers.rs  mod.rs  pack_info.rs  pack_kind.rs  pack_locator.rs  pack_pos.rs  value.rs
src/common/headers/: cluster.rs  container_pack.rs  content_pack.rs  directory_pack.rs  main_pack.rs  manifest_pack.rs  mod.rs  pack.rs
src/content_pack/: cluster.rs
src/creator/: basic_creator.rs  container_pack.rs  content_pack.rs  directory_pack.rs  errors.rs  main_pack.rs  manifest_pack.rs  mod.rs
src/creator/content_pack/: cluster.rs  clusterwriter.rs  creator.rs  mod.rs
src/creator/directory_pack/: directory_pack.rs  entry_def.rs  entry_store.rs  key_store.rs  mod.rs  simple_entry.rs  value.rs  value_store.rs
src/creator/directory_pack/layout/: entry.rs  mod.rs  properties.rs  property.rs  variant.rs
src/creator/directory_pack/schema/: entry.rs  mod.rs  properties.rs  property.rs
src/directory_pack/: entry.rs  entry_def.rs  index.rs  index_store.rs  key.rs  key_def.rs  key_store.rs  value.rs
src/reader/: byte_region.rs  byte_slice.rs  byte_stream.rs  container_pack.rs  content_pack.rs  directory_pack.rs  jubako.rs  locator.rs  main_pack.rs  manifest_pack.rs  missing.rs  mod.rs  stream.rs
src/reader/content_pack/: cluster.rs  mod.rs
src/reader/directory_pack/: entry.rs  entry_def.rs  entry_store.rs  finder.rs  index.rs  index_store.rs  key.rs  key_storage.rs  key_store.rs  lazy_entry.rs  mod.rs  property_compare.rs  range.rs  raw_layout.rs  raw_value.rs  resolver.rs  schema.rs  value.rs  value_store.rs
src/reader/directory_pack/builder/: mod.rs  property.rs
src/reader/directory_pack/layout/: entry.rs  mod.rs  properties.rs  property.rs  raw_property.rs  variant.rs
tests/: creator_jubako.rs  jubako.rs
