[package]
edition = "2021"
name = "jubako"
description = "The reference implementation of the Jubako container format"
version = "0.2.0"
authors = ["Matthieu Gautier <mgautier@kymeria.fr>"]
repository = "https://github.com/jubako/jubako"
license = "MIT"
keywords = ["compression", "container", "archive"]
categories = ["database", "data-structures", "compression"]

[features]
default = ["zstd"]
lz4 = ["dep:lz4"]
lzma = ["dep:xz2"]
zstd = ["dep:zstd"]

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
blake3 = "1.5.0"
lz4 = { version = "1.24.0", optional = true }
zstd = { version = "0.12.4", optional = true }
xz2 = { version = "0.1", optional = true }
clap = { version = "4.4.5", features = ["derive"] }
lru = "0.11.1"
memmap2 = "0.8.0"
pathdiff = "0.2.1"
spmc = "0.3.0"
log = "0.4.20"
fxhash = "0.2.1"
zerocopy = "0.7.5"
rayon = "1.8.0"
static_assertions = "1.1.0"
deranged = "0.3.10"

[dev-dependencies]
test-case = "3.2.1"
tempfile  = "3.8.0"
galvanic-test = "0.2.0"
