[package]
edition = "2021"
name = "jubako"
description = "The reference implementation of the Jubako container format"
version = "0.3.0-dev"
authors = ["Matthieu Gautier <mgautier@kymeria.fr>"]
repository = "https://github.com/jubako/jubako"
license = "MIT"
keywords = ["compression", "container", "archive"]
categories = ["database", "data-structures", "compression"]

[features]
default = ["zstd"]
lz4 = ["dep:lz4"]
lzma = ["dep:xz2"]
zstd = ["dep:zstd"]
explorable = ["dep:serde", "dep:erased-serde", "uuid/serde"]
build_bin = ["explorable", "dep:serde_json", "dep:serde_yaml", "dep:ron"]
all = ["lz4", "lzma", "zstd", "build_bin"]

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
blake3 = "1.5.0"
lz4 = { version = "1.24.0", optional = true }
zstd = { version = "0.12.4", optional = true }
xz2 = { version = "0.1", optional = true }
clap = { version = "4.4.5", features = ["derive"] }
lru = "0.11.1"
memmap2 = "0.8.0"
pathdiff = "0.2.1"
spmc = "0.3.0"
log = "0.4.20"
fxhash = "0.2.1"
zerocopy = "0.7.5"
rayon = "1.8.0"
static_assertions = "1.1.0"
deranged = "0.3.10"
tempfile = "3.8.0"
bstr = "1.9.1"
dropout = "0.1.0"
serde = { version = "1.0.197", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.114", optional = true }
serde_yaml = { version = "0.9.32", optional = true }
erased-serde = { version = "0.4", optional = true }
ron = { version = "0.8.1", optional = true }

[dev-dependencies]
test-case = "3.2.1"
tempfile  = "3.8.0"
galvanic-test = "0.2.0"

[[bin]]
name = "jbk"
required-features = ["build_bin"]
