[package]
edition = "2021"
name = "jubako"
description = "The reference implementation of the Jubako container format"
version = "0.4.0"
authors = ["Matthieu Gautier <mgautier@kymeria.fr>"]
repository = "https://github.com/jubako/jubako"
license = "MIT"
keywords = ["compression", "container", "archive"]
categories = ["database", "data-structures", "compression"]
rust-version = "1.85.1"

[features]
default = ["zstd"]
lz4 = ["dep:lz4"]
lzma = ["dep:liblzma"]
zstd = ["dep:zstd"]
explorable = ["dep:graphex", "dep:yansi"]
clap = ["dep:clap"]
build_bin = ["explorable", "dep:clap", "dep:git-version"]
explorable_serde = ["dep:serde", "dep:erased-serde", "dep:serde_json", "uuid/serde", "graphex/serde"]
all = ["lz4", "lzma", "zstd", "build_bin", "explorable_serde", "clap"]
nightly = []

[lib]
harness = false

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
blake3 = "1.5.0"
lz4 = { version = "1.24.0", optional = true }
zstd = { version = "0.13.2", optional = true }
liblzma = { version = "0.3.6", optional = true, features = ["static", "parallel"]}
clap = { version = "4.4.5", features = ["derive", "cargo"], optional = true }
lru = "0.16.2"
memmap2 = "0.9.4"
spmc = "0.3.0"
log = "0.4.20"
fxhash = "0.2.1"
rayon = "1.8.0"
deranged = "0.5.5"
tempfile = "3.8.0"
dropout = "0.1.0"
serde = { version = "1.0.197", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.114", optional = true }
erased-serde = { version = "0.4", optional = true }
crc = "3.2.1"
graphex = { version = "0.2.0", optional = true }
yansi = { version = "1.0.0", features = ["detect-tty"], optional = true }
const_format = { version = "0.2.33" }
git-version = { version = "0.3.9", optional = true }
thiserror = "2.0.9"
smallvec = { version = "1.13.2", features = ["union"] }
camino = "1.1.9"
pathdiff = { version = "0.2.3", features = ["camino"] }

[dev-dependencies]
tempfile  = "3.8.0"
rustest = "0.3.1"
rustest-fixtures = "0.3.1"

[[bin]]
name = "jbk"
required-features = ["build_bin"]

[[test]]
name = "jubako"
harness = false

[[test]]
name = "creator_jubako"
harness = false
